# TallyDB

./: AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
.github/ISSUE_TEMPLATE/: decision.yml  deferred.yml  todo.yml
.github/workflows/: ci.yml
crates/arrow-lite/: Cargo.toml
crates/arrow-lite/src/: bitmap.rs  buffer.rs  cdata.rs  column.rs  harness.rs  key.rs  lib.rs  logical.rs  schema.rs
crates/arrow-lite/tests/: arrow_rs_oracle.rs  pyarrow_roundtrip.py
crates/compute-blas/: Cargo.toml  build.rs
crates/compute-blas/src/: backend.rs  lib.rs
crates/compute-lapack/: Cargo.toml  build.rs
crates/compute-lapack/src/: backend.rs  lib.rs
crates/compute-lua/: Cargo.toml  build.rs
crates/compute-lua/src/: ffi.rs  lib.rs  state.rs
crates/corpus/: Cargo.toml
crates/corpus/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: database.rs  harness.rs  lib.rs  table.rs
crates/engine/tests/: m1_slice_oracle.py  m2_differential_oracle.py  m2_mutation_oracle.py  perf_sanity.rs
crates/query-lite/: Cargo.toml
crates/query-lite/src/: exec.rs  lib.rs  plan.rs  predicate.rs
crates/storage-lite/: Cargo.toml
crates/storage-lite/src/: codec.rs  format.rs  io.rs  lib.rs  mem.rs  store.rs  tombstone.rs
crates/storage-lite/tests/: compaction.rs  format_v1.rs  persistence.rs
