[package]
name = "compute-lua"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow-lite = { path = "../arrow-lite" }
# Native backend: a LuaJIT FFI binding crate (e.g. `mlua` with the luajit
# feature, or hand-rolled bindgen bindings) goes here, likely behind a
# `cfg(not(target_arch = "wasm32"))` feature gate.
#
# WASM backend (future, not current milestone): lua.wasm
# (github.com/andy-emerson/lua-wasi), behind
# `cfg(target_arch = "wasm32")`. Do not add this dependency until the
# WASM milestone actually starts.

[dev-dependencies]
