[package]
name = "compute-lua"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow-lite = { path = "../arrow-lite" }
# Native backend: a LuaJIT binding goes here, likely behind a
# `cfg(not(target_arch = "wasm32"))` feature gate. Whether that binding is
# `mlua` (luajit feature) or hand-rolled Lua 5.1 C API declarations is a
# deferred decision tracked in issues — prototype the zero-copy buffer
# hand-off before picking; do not choose silently.
#
# WASM backend (future, not current milestone): lua.wasm
# (github.com/andy-emerson/lua-wasi), behind
# `cfg(target_arch = "wasm32")`. Do not add this dependency until the
# WASM milestone actually starts.

[dev-dependencies]
