[package]
name = "compute-lua"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow-lite = { path = "../arrow-lite" }
# Native backend (settled 2026-07-24; see DESIGN.md, "The Lua layer"):
# canonical PUC Lua 5.4, vendored — unmodified upstream sources compiled
# in via a `cc` build script — with hand-rolled thin bindings to the 5.4
# C API. No `mlua`, no LuaJIT (both rejected with reopen conditions in
# the decision record). Add the vendored sources and build.rs when this
# crate's implementation actually starts; the first act is the zero-copy
# userdata-view spike.
#
# WASM backend (future, not current milestone): lua.wasm
# (github.com/andy-emerson/lua-wasi) — also Lua 5.4, same C API, behind
# `cfg(target_arch = "wasm32")`. Do not add this dependency until the
# WASM milestone actually starts.

[dev-dependencies]
