[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow-lite = { path = "../arrow-lite" }
storage-lite = { path = "../storage-lite" }
query-lite = { path = "../query-lite" }
compute-lua = { path = "../compute-lua" }
compute-blas = { path = "../compute-blas" }
compute-lapack = { path = "../compute-lapack" }

[dev-dependencies]
