[package]
name = "query-lite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow-lite = { path = "../arrow-lite" }
storage-lite = { path = "../storage-lite" }
sqlparser = "0.62.0"

[dev-dependencies]
# A DuckDB (or DataFusion) dependency belongs here, dev-only, used purely
# as a differential correctness oracle in tests. It must never become a
# runtime dependency of this crate — see the README on why DataFusion's
# executor specifically is not something we vendor or link.
